fixed scrolling issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ header .contact a:hover {
     position: absolute;
     top: 0;
     right: 0;
-    transform: translateY(100%);
+    transform: translateY(calc(-100% - 2.5rem));
     transition: transform 200ms ease;
   }
   #nav-links-container ul {
