--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -130,7 +130,7 @@ header{
     top: 0;
     right: 0;
 
-    transform: translateY(100%);
+    transform: translateY(calc(-100% - 2.5rem));
     transition: transform 200ms ease;
     
     ul{
